// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DATA DELIVERY TEST SUITE 1. Should render loading state 1`] = `
<Component
  data={
    Object {
      "error": false,
      "getWeather": Object {
        "current": Object {
          "base": Object {
            "condition": "Hot",
            "windCard": "NNW",
          },
          "standard": Object {
            "feelsLike": 104,
            "precip": 0,
            "pres": 0,
            "temp": 98.6,
            "vis": 10,
            "wind": 45,
          },
        },
        "location": Object {
          "city": "Wichita",
          "country": "USA",
          "currentTime": "2017-11-25 5:54",
          "region": "Kansas",
        },
      },
      "loading": true,
    }
  }
>
  <h1>
    Loading...
  </h1>
</Component>
`;

exports[`DATA DELIVERY TEST SUITE 2. Should render error state 1`] = `
<Component
  data={
    Object {
      "error": true,
      "getWeather": Object {
        "current": Object {
          "base": Object {
            "condition": "Hot",
            "windCard": "NNW",
          },
          "standard": Object {
            "feelsLike": 104,
            "precip": 0,
            "pres": 0,
            "temp": 98.6,
            "vis": 10,
            "wind": 45,
          },
        },
        "location": Object {
          "city": "Wichita",
          "country": "USA",
          "currentTime": "2017-11-25 5:54",
          "region": "Kansas",
        },
      },
      "loading": false,
    }
  }
>
  <h1>
    Error...
  </h1>
</Component>
`;

exports[`DATA DELIVERY TEST SUITE 2. Should render error state 2`] = `
<Component
  data={
    Object {
      "error": false,
      "getWeather": Object {
        "current": Object {
          "base": Object {
            "condition": "Hot",
            "windCard": "NNW",
          },
          "standard": Object {
            "feelsLike": 104,
            "precip": 0,
            "pres": 0,
            "temp": 98.6,
            "vis": 10,
            "wind": 45,
          },
        },
        "location": Object {
          "city": "Wichita",
          "country": "USA",
          "currentTime": "2017-11-25 5:54",
          "region": "Kansas",
        },
      },
      "loading": false,
    }
  }
>
  <div>
    <h1>
      Hello World
    </h1>
    <h2>
      Wichita, Kansas, USA
    </h2>
    <h2>
      2017-11-25 5:54
    </h2>
    <div>
      <h2>
        Currently: 
        Hot
         & 
        98.6
        F
      </h2>
      <h4>
        Feels like: 
        104
        F
      </h4>
      <div>
        <h3>
          Change of rain: 
          0
          %
        </h3>
        <h3>
          Wind: 
          NNW
           
          45
          mph
        </h3>
        <h3>
          Pressure: 
          0
          in
        </h3>
        <h3>
          Visibility: 
          10
          mi
        </h3>
      </div>
    </div>
  </div>
</Component>
`;
